Delicious dishes menu

--- a/Lesson140218/product.html
+++ b/Lesson140218/product.html
@@ -1,48 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Simple Product Overview</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/product-style.css">
-
-  
+    <meta charset="UTF-8">
+    <title>Simple Product Overview</title>
+    <link href='https://fonts.googleapis.com/css?family=Reem+Kufi' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/product-style.css">
 </head>
 
 <body>
-
-  <link href='https://fonts.googleapis.com/css?family=Reem+Kufi' rel='stylesheet' type='text/css''>
-
-<div class="wrapper">
-  
-  <div class="col-1-2">
-    <div class="product-wrap">
-      <div class="product-shot">
-        <img src="images/1.jpg" alt="" />
-      </div>
+    <div class="logo">
+        <a href="" class="logo"><img src="images/valve_logo.svg" alt="logo"></a>
     </div>
-  </div>
-  
-  <div class="col-1-2">
-    <div class="product-info">
-      <h2>Grilled Spiced Chicken Skewers with Cucumber Salad</h2>
-      <div class="desc">
-        Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. At elementum eu facilisis sed odio morbi quis. Eget sit amet tellus cras adipiscing enim eu turpis egestas. Tempus quam pellentesque nec nam aliquam sem et tortor. Mattis enim ut tellus elementum sagittis vitae et leo duis. Morbi non arcu risus quis varius quam quisque. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Pretium viverra suspendisse potenti nullam ac. Pharetra sit amet aliquam id diam maecenas. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl.
-      </div>
-      <ul class="sizing-list">
-        <li class="size">XL</li>
-        <li class="size active">XXL</li>
-        <li class="size">XXXL</li>
-      </ul>
-      <a href="" class="button">Add to Cart</a>
+    <nav class="blocks-menus">
+        <div class="container">
+            <ul class="primary-menus">
+                <li><a href="index.html">Home</a></li>
+                <li class="menus-dropdown">
+                    <a href="#">GOAT DISHES <i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown">
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                    </ul>
+                </li>
+                <li class="menus-dropdown">
+                    <a href="#">Tacos/ Wraps <i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown">
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                    </ul>
+                </li>
+                <li class="menus-megamenus">
+                    <a href="#">FEEDBACK <i class="fa fa-angle-down"></i></a>
+                    <ul class="mega-menus">
+                        <div class="section">
+                            <h3>Entrees 1</h3>
+                            <li><a href="feedback.html">BBQ Chicken 1</a></li>
+                            <li><a href="feedback.html">BBQ Chicken 2</a></li>
+                            <li><a href="feedback.html">BBQ Chicken 3</a></li>
+                        </div>
+                        <div class="section">
+                            <h3>Entrees 2</h3>
+                            <li><a href="feedback.html">Curry Chicken 1</a></li>
+                            <li><a href="feedback.html">Curry Chicken 2</a></li>
+                            <li><a href="feedback.html">Curry Chicken 3</a></li>
+                        </div>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="wrapper">
+        <div class="col-1-2">
+            <div class="product-wrap">
+                <div class="product-shot">
+                    <img src="images/1.jpg" alt="" />
+                </div>
+            </div>
+        </div>
+        <div class="col-1-2">
+            <div class="product-info">
+                <h2>Grilled Spiced Chicken Skewers with Cucumber Salad</h2>
+                <div class="desc">
+                    Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. At elementum eu facilisis sed odio morbi quis. Eget sit amet tellus cras adipiscing enim eu turpis egestas. Tempus quam pellentesque nec nam aliquam sem et tortor. Mattis enim ut tellus elementum sagittis vitae et leo duis. Morbi non arcu risus quis varius quam quisque. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Pretium viverra suspendisse potenti nullam ac. Pharetra sit amet aliquam id diam maecenas. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl.
+                </div>
+                <ul class="sizing-list">
+                    <li class="size">XL</li>
+                    <li class="size active">XXL</li>
+                    <li class="size">XXXL</li>
+                </ul>
+                <a href="" class="button">Add to Cart</a>
+            </div>
+        </div>
     </div>
-    
-  </div>
-</div>
-  
+    <footer>
+        </i> 2018 Produced in
+        <address class="footer-address" role="company address">Kyiv,Ukraine</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+    </footer>
 </body>
 
 </html>
