--- a/Lesson140218/index.html
+++ b/Lesson140218/index.html
@@ -1,137 +1,177 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Delicious dishes menu</title>
-  
+    <meta charset="UTF-8">
+    <title>Delicious dishes menu</title>
     <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link href='https://https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Reem+Kufi' rel='stylesheet'  type='text/css'>
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Reem+Kufi' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-
-		<div class="blocks-menus">
-			<div class="container">
-				<ul class="primary-menus">
-					<li><a href="#">Home</a></li>
-					<li class="menus-dropdown">
-						<a href="#">GOAT DISHES <i class="fa fa-angle-down"></i></a>
-						<ul class="dropdown">
-							<li><a href="#">Curry Goat 1</a></li>
-							<li><a href="#">Curry Goat 2</a></li>
-							<li><a href="#">Curry Goat 3</a></li>
-							<li><a href="#">Curry Goat 1</a></li>
-							<li><a href="#">Curry Goat 2</a></li>
-							<li><a href="#">Curry Goat 3</a></li>
-							<li><a href="#">Curry Goat 1</a></li>
-							<li><a href="#">Curry Goat 2</a></li>
-							<li><a href="#">Curry Goat 3</a></li>
-						</ul>
-					</li>
-					<li class="menus-dropdown">
-						<a href="#">Tacos/ Wraps <i class="fa fa-angle-down"></i></a>
-						<ul class="dropdown">
-							<li><a href="#">Taco 1</a></li>
-							<li><a href="#">Taco 2</a></li>
-							<li><a href="#">Taco 3</a></li>
-							<li><a href="#">Taco 1</a></li>
-							<li><a href="#">Taco 2</a></li>
-							<li><a href="#">Taco 3</a></li>
-							<li><a href="#">Taco 1</a></li>
-							<li><a href="#">Taco 2</a></li>
-							<li><a href="#">Taco 3</a></li>
-						</ul>
-					</li>
-					<li class="menus-megamenus">
-						<a href="#">CHICKEN DISHES <i class="fa fa-angle-down"></i></a>
-						<ul class="mega-menus">
-							<div class="section">
-								<h3>Entrees 1</h3>
-								<li><a href="#">BBQ Chicken 1</a></li>
-								<li><a href="#">BBQ Chicken 2</a></li>
-								<li><a href="#">BBQ Chicken 3</a></li>
-							</div>
-							<div class="section">
-								<h3>Entrees 2</h3>
-								<li><a href="#">Curry Chicken 1</a></li>
-								<li><a href="#">Curry Chicken 2</a></li>
-								<li><a href="#">Curry Chicken 3</a></li>
-							</div>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
-<div id="wrapper">
-  <section>
-    <ul id="gallery">
-      <li>
-        <a href="product.html">
-          <img src="images/1.jpg" alt="">
-          <p>Grilled Spiced Chicken Skewers with Salad</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/2.jpeg" alt="">
-          <p>Grilled Pesto Chicken with Summer Squash</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/3.jpeg" alt="">
-          <p>Flattened Chicken and Grilled Romaine with Sauce</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/4.jpeg" alt="">
-          <p>Grilled Avocado Caprese Crostini</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/5.jpeg" alt="">
-          <p>Smokey Grilled Sweet Potato Wedges</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/6.jpg" alt="">
-          <p>Coconut Pineapple Shrimp Skewers</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/7.jpg" alt="">
-          <p>Sweet Heat Cheerwine Baby Back Ribs</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/8.jpg" alt="">
-          <p>Broiled Steak Kabobs With Orange Relish</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/9.jpg" alt="">
-          <p>Spicy Grilled Shrimp with Garlic and Lemon</p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/10.jpg" alt="">
-          <p>Miso-Glazed Chicken Burgers with Cabbage Slaw</p>
-        </a>
-      </li>
-    </ul>
-  </section>
-
+    <div class="logo">
+        <a href="" class="logo"><img src="images/valve_logo.svg" alt="logo"></a>
+    </div>
+    <nav class="blocks-menus">
+        <div class="container">
+            <ul class="primary-menus">
+                <li><a href="#">Home</a></li>
+                <li class="menus-dropdown">
+                    <a href="#">GOAT DISHES <i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown">
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                        <li><a href="product.html">Curry Goat 1</a></li>
+                        <li><a href="product.html">Curry Goat 2</a></li>
+                        <li><a href="product.html">Curry Goat 3</a></li>
+                    </ul>
+                </li>
+                <li class="menus-dropdown">
+                    <a href="#">Tacos/ Wraps <i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown">
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                        <li><a href="product.html">Taco 1</a></li>
+                        <li><a href="product.html">Taco 2</a></li>
+                        <li><a href="product.html">Taco 3</a></li>
+                    </ul>
+                </li>
+                <li class="menus-megamenus">
+                    <a href="#">FEEDBACK<i class="fa fa-angle-down"></i></a>
+                    <ul class="mega-menus">
+                        <div class="section">
+                            <h3>Entrees 1</h3>
+                            <li><a href="feedback.html">BBQ Chicken 1</a></li>
+                            <li><a href="feedback.html">BBQ Chicken 2</a></li>
+                            <li><a href="feedback.html">BBQ Chicken 3</a></li>
+                        </div>
+                        <div class="section">
+                            <h3>Entrees 2</h3>
+                            <li><a href="feedback.html">Curry Chicken 1</a></li>
+                            <li><a href="feedback.html">Curry Chicken 2</a></li>
+                            <li><a href="feedback.html">Curry Chicken 3</a></li>
+                        </div>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="sidebar-hidden-after-nav">
+        <h2 class="title-sidebar">SHOP CATEGORIES</h2>
+    </div>
+    <div class="left-sidebar">
+        <h3>CART</h3>
+        <div class="cart">
+            <span class="empty">No items in cart.</span>
+        </div>
+        <h3>CATEGORIES</h3>
+        <div class="checklist">
+            <ul>
+                <li><a href=""><span></span>New Arivals</a></li>
+                <li><a href=""><span></span>Main articles</a></li>
+                <li><a href=""><span></span>Steak dishes</a></li>
+                <li><a href=""><span></span>Cuts</a></li>
+                <li><a href=""><span></span>Preparation</a></li>
+                <li><a href=""><span></span>Related topics</a></li>
+                <li><a href=""><span></span>Vegetables</a></li>
+                <li><a href=""><span></span>Mushrooms</a></li>
+                <li><a href=""><span></span>Steak sauces</a></li>
+                <li><a href=""><span></span>Pork chop bun</a></li>
+            </ul>
+        </div>
+        <h3>Roasting</h3>
+        <div class="checklist colors">
+            <ul>
+                <li><a href=""><span></span>Method</a></li>
+                <li><a href=""><span style="background:#FFCC80"></span>Low-temperature</a></li>
+                <li><a href=""><span style="background:#F57F17"></span>Middle-temperature</a></li>
+                <li><a href=""><span style="background:#DD2C00"></span>High-temperature</a></li>
+                <li><a href=""><span style="background:#E65100"></span>Combination Low-temperature</a></li>
+            </ul>
+        </div>
+        <h3>SIZES</h3>
+        <div class="checklist sizes">
+            <ul>
+                <li><a href=""><span></span>S</a></li>
+                <li><a href=""><span></span>M</a></li>
+                <li><a href=""><span></span>L</a></li>
+                <li><a href=""><span></span>XL</a></li>
+                <li><a href=""><span></span>XXL</a></li>
+                <li><a href=""><span></span>XXXL</a></li>
+            </ul>
+        </div>
+    </div>
+    <main id="wrap">
+        <div id="columns" class="columns_4">
+            <figure>
+                <img src="images/1.jpg">
+                <figcaption>Green Checkered Shirt</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/2.jpeg">
+                <figcaption>Green and Black Flowers</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/3.jpeg">
+                <figcaption>Black Dots</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/4.jpeg">
+                <figcaption>Red Flowy</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/5.jpeg">
+                <figcaption>Yellow Button-Up</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/6.jpg">
+                <figcaption>Put a Bird On It</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/7.jpg">
+                <figcaption>Polka Dots</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/8.jpg">
+                <figcaption>Blue Spots</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+            <figure>
+                <img src="images/9.jpg">
+                <figcaption>Pink Dots</figcaption>
+                <span class="price">$44</span>
+                <a class="button" href="product.html">Book Now</a>
+            </figure>
+    </main>
+    <footer>
+        </i> 2018 Produced in
+        <address class="footer-address" role="company address">Kyiv,Ukraine</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+    </footer>
 </body>
 
 </html>
